Prevents font overflow by adjusting padding and responsive spacing and fix input centering by adjusting form and input widths

--- a/src/app/countdown/countdown.component.scss
+++ b/src/app/countdown/countdown.component.scss
@@ -6,7 +6,7 @@
   gap: 3rem;
   background: #f5f3f3;
   min-height: 100vh;
-  padding: 0 1.25rem;
+  padding: 0 1.5rem;
 
   .countdown-display {
     width: 100%;
@@ -38,7 +38,7 @@
   .countdown-form {
     display: flex;
     flex-direction: column;
-    width: 90%;
+    width: 100%;
     align-items: center;
     text-align: center;
 
@@ -50,7 +50,7 @@
       max-width: 300px;
 
       input {
-        width: 100%;
+        width: 90%;
         padding: 1.2em 0.8em;
         font-size: 1em;
         border: 1px solid #757575;
@@ -90,6 +90,9 @@
 
   // Layout adjustment for landscape mode
   @media (min-width: 700px) {
+    .countdown-wrapper {
+      padding: 0 2rem;
+    }
     .countdown-form {
       flex-direction: row;
       justify-content: center;
